# TestMKLDNN

./: CMakeLists.txt  gemm_example.cpp  main.cpp
